// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-calendar #render should render component as expected (1) 1`] = `
<gux-calendar value="2018-02-13">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            February 2018
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517097600000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517184000000" tabindex="-1">
              29
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517270400000" tabindex="-1">
              30
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517356800000" tabindex="-1">
              31
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517443200000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517529600000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517616000000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1517702400000" tabindex="-1">
              4
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517788800000" tabindex="-1">
              5
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517875200000" tabindex="-1">
              6
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517961600000" tabindex="-1">
              7
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518048000000" tabindex="-1">
              8
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518134400000" tabindex="-1">
              9
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518220800000" tabindex="-1">
              10
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1518307200000" tabindex="-1">
              11
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518393600000" tabindex="-1">
              12
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-selected" data-date="1518480000000" tabindex="0">
              13
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518566400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518652800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518739200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518825600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1518912000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518998400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519084800000" tabindex="-1">
              20
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519171200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519257600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519344000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519430400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1519516800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519603200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519689600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519776000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519862400000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519948800000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520035200000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520121600000" tabindex="-1">
              4
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520208000000" tabindex="-1">
              5
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520294400000" tabindex="-1">
              6
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520380800000" tabindex="-1">
              7
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520467200000" tabindex="-1">
              8
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520553600000" tabindex="-1">
              9
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520640000000" tabindex="-1">
              10
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (2) 1`] = `
<gux-calendar mode="single" number-of-months="2" value="2018-02-13">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            February 2018
          </label>
          <label>
            March 2018
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517097600000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517184000000" tabindex="-1">
              29
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517270400000" tabindex="-1">
              30
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517356800000" tabindex="-1">
              31
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517443200000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517529600000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517616000000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1517702400000" tabindex="-1">
              4
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517788800000" tabindex="-1">
              5
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517875200000" tabindex="-1">
              6
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517961600000" tabindex="-1">
              7
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518048000000" tabindex="-1">
              8
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518134400000" tabindex="-1">
              9
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518220800000" tabindex="-1">
              10
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1518307200000" tabindex="-1">
              11
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518393600000" tabindex="-1">
              12
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-selected" data-date="1518480000000" tabindex="0">
              13
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518566400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518652800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518739200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518825600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1518912000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518998400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519084800000" tabindex="-1">
              20
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519171200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519257600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519344000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519430400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1519516800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519603200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519689600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519776000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519862400000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519948800000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520035200000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520121600000" tabindex="-1">
              4
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520208000000" tabindex="-1">
              5
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520294400000" tabindex="-1">
              6
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520380800000" tabindex="-1">
              7
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520467200000" tabindex="-1">
              8
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520553600000" tabindex="-1">
              9
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520640000000" tabindex="-1">
              10
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
        </table>
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519516800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519603200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519689600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519776000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519862400000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519948800000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520035200000" tabindex="-1">
              3
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1520121600000" tabindex="-1">
              4
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520208000000" tabindex="-1">
              5
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520294400000" tabindex="-1">
              6
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520380800000" tabindex="-1">
              7
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520467200000" tabindex="-1">
              8
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520553600000" tabindex="-1">
              9
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520640000000" tabindex="-1">
              10
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1520726400000" tabindex="-1">
              11
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520812800000" tabindex="-1">
              12
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520899200000" tabindex="-1">
              13
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1520985600000" tabindex="-1">
              14
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1521072000000" tabindex="-1">
              15
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1521158400000" tabindex="-1">
              16
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1521244800000" tabindex="-1">
              17
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1521331200000" tabindex="-1">
              18
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1521417600000" tabindex="-1">
              19
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1521504000000" tabindex="-1">
              20
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1521590400000" tabindex="-1">
              21
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1521676800000" tabindex="-1">
              22
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1521763200000" tabindex="-1">
              23
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1521849600000" tabindex="-1">
              24
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1521936000000" tabindex="-1">
              25
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1522022400000" tabindex="-1">
              26
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1522108800000" tabindex="-1">
              27
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1522195200000" tabindex="-1">
              28
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1522281600000" tabindex="-1">
              29
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1522368000000" tabindex="-1">
              30
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1522454400000" tabindex="-1">
              31
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1522540800000" tabindex="-1">
              1
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1522627200000" tabindex="-1">
              2
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1522713600000" tabindex="-1">
              3
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1522800000000" tabindex="-1">
              4
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1522886400000" tabindex="-1">
              5
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1522972800000" tabindex="-1">
              6
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1523059200000" tabindex="-1">
              7
              <span class="gux-sr-only">
                March 2018
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (3) 1`] = `
<gux-calendar mode="range" value="2018-02-13/2018-02-20">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            February 2018
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1517097600000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1517184000000" tabindex="-1">
              29
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1517270400000" tabindex="-1">
              30
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1517356800000" tabindex="-1">
              31
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517443200000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517529600000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517616000000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1517702400000" tabindex="-1">
              4
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517788800000" tabindex="-1">
              5
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517875200000" tabindex="-1">
              6
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517961600000" tabindex="-1">
              7
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518048000000" tabindex="-1">
              8
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518134400000" tabindex="-1">
              9
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518220800000" tabindex="-1">
              10
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1518307200000" tabindex="-1">
              11
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518393600000" tabindex="-1">
              12
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered gux-selected gux-start-date" data-date="1518480000000" tabindex="0">
              13
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1518566400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1518652800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1518739200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1518825600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-hovered" data-date="1518912000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1518998400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-end-date gux-hovered gux-selected" data-date="1519084800000" tabindex="0">
              20
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519171200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519257600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519344000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519430400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1519516800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519603200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519689600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519776000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1519862400000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1519948800000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1520035200000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (4) 1`] = `
<gux-calendar max-date="2019-07-10" min-date="2019-05-02" mode="range" value="2019-06-13/2019-06-20">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            June 2019
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1558828800000" tabindex="-1">
              26
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1558915200000" tabindex="-1">
              27
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1559001600000" tabindex="-1">
              28
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1559088000000" tabindex="-1">
              29
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1559174400000" tabindex="-1">
              30
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1559260800000" tabindex="-1">
              31
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1559347200000" tabindex="-1">
              1
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1559433600000" tabindex="-1">
              2
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1559520000000" tabindex="-1">
              3
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1559606400000" tabindex="-1">
              4
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1559692800000" tabindex="-1">
              5
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1559779200000" tabindex="-1">
              6
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1559865600000" tabindex="-1">
              7
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1559952000000" tabindex="-1">
              8
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1560038400000" tabindex="-1">
              9
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1560124800000" tabindex="-1">
              10
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1560211200000" tabindex="-1">
              11
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1560297600000" tabindex="-1">
              12
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered gux-selected gux-start-date" data-date="1560384000000" tabindex="0">
              13
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1560470400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1560556800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-hovered" data-date="1560643200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1560729600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1560816000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered" data-date="1560902400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" class="gux-end-date gux-hovered gux-selected" data-date="1560988800000" tabindex="0">
              20
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1561075200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1561161600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1561248000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1561334400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1561420800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1561507200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1561593600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1561680000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="false" data-date="1561766400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1561852800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1561939200000" tabindex="-1">
              1
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1562025600000" tabindex="-1">
              2
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1562112000000" tabindex="-1">
              3
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1562198400000" tabindex="-1">
              4
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1562284800000" tabindex="-1">
              5
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1562371200000" tabindex="-1">
              6
              <span class="gux-sr-only">
                June 2019
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;
